# dot

./: .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST.in  README.rst  environment.yml  environment_dev.yml  environment_gcp.yml  example.py  run_dot.py  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  rtd-environment.yml
docs/_static/: dot.css
docs/dot/: dev.rst  forwardmodel.rst  gettingstarted.rst  index.rst  install.rst  plots.rst
dot/: __init__.py  conftest.py  io.py  model.py  plots.py  vis.py
dot/data/: abdor_lc_example.npy
dot/tests/: test_model.py
dot/utils/: gcp.py
licenses/: LICENSE.rst
scripts/: README.md  demo.py
