[metadata]
name = dot
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/dot
description = Starspot rotational modulation forward model
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = bmorris3/dot

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    matplotlib
    pymc3
    corner
    lightkurve

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
dot = data/*

[tool:pytest]
testpaths = "dot" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    dot/_astropy_init*
    dot/conftest.py
    dot/*setup_package*
    dot/tests/*
    dot/*/tests/*
    dot/extern/*
    dot/version*
    */dot/_astropy_init*
    */dot/conftest.py
    */dot/*setup_package*
    */dot/tests/*
    */dot/*/tests/*
    */dot/extern/*
    */dot/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
